# betterblox

./: .gitignore  .gitmodules  CMakeLists.txt  MANUAL.md  README.md  milestones-EN.txt  milestones-SB.txt  opgl.sln  vcpkg.json
assets/shaders/: blockShader.glsl  fragForInventoryMenu.glsl  fragForPointer.glsl  fragmentShader1.glsl  shader.frag  vertForInventoryMenu.glsl  vertForPointer.glsl  vertexShader1.glsl
milestones/: milestones-EN.txt  milestones-JC.txt  milestones-SB.txt
opgl/: biome.hpp  camera.hpp  glad.c  inventory.hpp  main.cpp  opgl.vcxproj  opgl.vcxproj.filters  perlin.hpp
src/: BetterBlox.hpp  Biome.hpp  Block.hpp  Camera.hpp  ChunkLoader.hpp  Inventory.hpp  PerlinNoise.hpp  Player.hpp  Shader.hpp  Structures.hpp  biome.hpp  block.cpp  block.h  camera.hpp  glad.c  inventory.hpp  main.cpp  perlin.hpp  shader.hpp  stb_image.h
src/Storage/: block.cpp  block.h  main.cpp
src/utils/: RuntimeError.hpp
